Refactor: Remove ApprovalStatusDao from BO Approval (#182)